--- a/.github/workflows/update-release-metadata.yml
+++ b/.github/workflows/update-release-metadata.yml
@@ -2,11 +2,6 @@ name: Update Release Metadata
 
 on:
   workflow_dispatch:
-    inputs:
-      project_id:
-        description: 'Project ID (e.g., go3t, miapp)'
-        required: true
-        type: string
 
 jobs:
   update-metadata:
@@ -18,68 +13,56 @@ jobs:
         with:
           path: releases-repo
       
-      - name: Get latest release info
-        id: get_release
+      - name: Get all releases info
+        id: get_releases
         run: |
-          # Get the latest release from GitHub API
+          # Get all releases from GitHub API for go3t project as example
           RESPONSE=$(curl -s -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/HoteiApp-testing/${{ github.event.inputs.project_id }}/releases/latest")
+            "https://api.github.com/repos/HoteiApp-testing/go3t/releases")
           
-          # Extract release information
-          VERSION=$(echo "$RESPONSE" | jq -r '.tag_name' | sed 's/^v//')
-          RELEASE_URL=$(echo "$RESPONSE" | jq -r '.assets[0].browser_download_url')
-          ALL_RELEASES_URL="https://github.com/HoteiApp-testing/${{ github.event.inputs.project_id }}/releases"
-          DATE=$(echo "$RESPONSE" | jq -r '.published_at' | cut -d'T' -f1)
+          # Process all releases and create JSON array
+          RELEASES_ARRAY="[]"
           
-          # Export values for later steps
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "release_url=$RELEASE_URL" >> $GITHUB_OUTPUT
-          echo "all_releases_url=$ALL_RELEASES_URL" >> $GITHUB_OUTPUT
-          echo "date=$DATE" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" | jq -c '.[]' | while read release; do
+            VERSION=$(echo "$release" | jq -r '.tag_name' | sed 's/^v//')
+            RELEASE_URL=$(echo "$release" | jq -r '.assets[0].browser_download_url')
+            ALL_RELEASES_URL="https://github.com/HoteiApp-testing/go3t/releases"
+            DATE=$(echo "$release" | jq -r '.published_at' | cut -d'T' -f1)
+            
+            # Create release object
+            RELEASE_OBJ=$(jq -n --arg version "$VERSION" \
+                              --arg releaseUrl "$RELEASE_URL" \
+                              --arg allReleasesUrl "$ALL_RELEASES_URL" \
+                              --arg date "$DATE" \
+                              '{version: $version, releaseUrl: $releaseUrl, allReleasesUrl: $allReleasesUrl, date: $date}')
+            
+            # Add to releases array
+            RELEASES_ARRAY=$(echo "$RELEASES_ARRAY" | jq -c --argjson newRelease "$RELEASE_OBJ" '. + [$newRelease]')
+          done
+          
+          # Save releases array to output
+          echo "releases_array=$RELEASES_ARRAY" >> $GITHUB_OUTPUT
       
       - name: Create project directory if not exists
         run: |
-          mkdir -p releases-repo/metadata/${{ github.event.inputs.project_id }}
-      
-      - name: Read existing releases
-        id: read_existing
-        run: |
-          PROJECT_DIR="releases-repo/metadata/${{ github.event.inputs.project_id }}"
-          RELEASES_FILE="$PROJECT_DIR/releases.json"
-          
-          if [ -f "$RELEASES_FILE" ]; then
-            # Read existing releases and escape JSON for passing as output
-            EXISTING_RELEASES=$(cat "$RELEASES_FILE" | jq -c '.releases' | sed 's/\$/\\$/g')
-            echo "existing_releases=$EXISTING_RELEASES" >> $GITHUB_OUTPUT
-          else
-            echo "existing_releases=[]" >> $GITHUB_OUTPUT
-          fi
+          mkdir -p releases-repo/metadata/go3t
       
       - name: Generate releases.json
         run: |
-          PROJECT_DIR="releases-repo/metadata/${{ github.event.inputs.project_id }}"
+          PROJECT_DIR="releases-repo/metadata/go3t"
           RELEASES_FILE="$PROJECT_DIR/releases.json"
           
-          # Create new release entry
-          NEW_RELEASE=$(jq -n --arg version "${{ steps.get_release.outputs.version }}" \
-                            --arg releaseUrl "${{ steps.get_release.outputs.release_url }}" \
-                            --arg allReleasesUrl "${{ steps.get_release.outputs.all_releases_url }}" \
-                            --arg date "${{ steps.get_release.outputs.date }}" \
-                            '{version: $version, releaseUrl: $releaseUrl, allReleasesUrl: $allReleasesUrl, date: $date}')
+          # Get releases array from previous step
+          RELEASES_ARRAY='${{ steps.get_releases.outputs.releases_array }}'
           
-          # Get existing releases
-          EXISTING_RELEASES='${{ steps.read_existing.outputs.existing_releases }}'
-          
-          # Combine new release with existing ones
-          jq -n --argjson newRelease "$NEW_RELEASE" \
-                 --argjson existingReleases "$EXISTING_RELEASES" \
-                 '{releases: ([$newRelease] + $existingReleases)}' > "$RELEASES_FILE"
+          # Create final JSON structure
+          jq -n --argjson releases "$RELEASES_ARRAY" '{releases: $releases}' > "$RELEASES_FILE"
       
       - name: Commit and push changes
         run: |
           cd releases-repo
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add metadata/${{ github.event.inputs.project_id }}/releases.json
-          git commit -m "Update metadata for ${{ github.event.inputs.project_id }} v${{ steps.get_release.outputs.version }}"
+          git add metadata/go3t/releases.json
+          git commit -m "Update metadata for go3t releases"
           git push
